force-app/main/default/objects/ClusterJobCluster__c/ClusterJobCluster__c.object-meta.xml
<CustomObject>
    <label>Job Result Cluster</label>
    <nameField>
        <displayFormat>CJC-{0000}</displayFormat>
        <label>ClusterJobCluster Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Result Clusters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>