force-app/main/default/objects/ClusterJobCluster__c/fields/ClusterJob__c.field-meta.xml
<CustomField>
    <fullName>ClusterJob__c</fullName>
    <label>Cluster Job</label>
    <referenceTo>ClusterJob__c</referenceTo>
    <relationshipName>JobClusters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>