force-app/main/default/objects/ClusterJobCluster__c/fields/ClusterName__c.field-meta.xml
<CustomField>
    <fullName>ClusterName__c</fullName>
    <label>Cluster Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>