force-app/main/default/objects/ClusterJobCluster__c/fields/ClusterNumber__c.field-meta.xml
<CustomField>
    <fullName>ClusterNumber__c</fullName>
    <label>Cluster Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>